@@ -3,16 +3,25 @@ package ewm.events.service;
 import client.StatsClient;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import ewm.categories.model.Category;
+import ewm.categories.repository.CategoryRepository;
+import ewm.dto.EndpointHitDto;
 import ewm.dto.ViewStatsDto;
 import ewm.events.dto.*;
 import ewm.events.dto.params.AdminEventParams;
+import ewm.events.dto.params.PaginationParams;
 import ewm.events.dto.params.PublicEventParams;
+import ewm.events.dto.params.UserEventPathParams;
 import ewm.events.mapper.EventMapper;
 import ewm.events.model.Event;
 import ewm.events.model.State;
 import ewm.events.repository.EventsRepository;
 import ewm.events.repository.specification.EventSpecification;
+import ewm.exception.ConflictException;
 import ewm.exception.NotFoundException;
+import ewm.exception.ValidationException;
+import ewm.users.model.User;
+import ewm.users.repository.UserRepository;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
@@ -24,6 +33,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -38,6 +48,12 @@ public class EventsServiceImpl implements EventsService {
     private final EventMapper eventMapper;
     private final StatsClient statsClient;
     private final ObjectMapper objectMapper;
+    private final CategoryRepository categoryRepository;
+    private final UserRepository userRepository;
+
+    private static final String DATE_FORMAT = "yyyy-MM-dd HH:mm:ss";
+    private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern(DATE_FORMAT);
+    private static final String APP_NAME = "ewm-main-service";
 
     private Sort buildSort(PublicEventParams params) {
 
@@ -64,6 +80,8 @@ public class EventsServiceImpl implements EventsService {
             startDate = LocalDateTime.now();
         }
 
+        sendHitToStats("/events", request.getRemoteAddr());
+
         Sort sort = buildSort(params);
 
         PageRequest pageRequest = PageRequest.of(
@@ -82,8 +100,16 @@ public class EventsServiceImpl implements EventsService {
                 .and(EventSpecification.dateBefore(endDate));
 
         Page<Event> page = eventsRepository.findAll(spec, pageRequest);
+        List<Event> events = page.getContent();
 
-        return eventMapper.toEventShortDtoList(page.getContent());
+        if (events.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        List<EventShortDto> dtos = eventMapper.toEventShortDtoList(events);
+        enrichEventsWithStats(dtos);
+
+        return dtos;
     }
 
     @Override
@@ -101,15 +127,15 @@ public class EventsServiceImpl implements EventsService {
         List<State> states = params.getStates() == null
                 ? null
                 : params.getStates().stream()
-                  .map(State::valueOf)
-                  .toList();
+                .map(State::valueOf)
+                .toList();
 
         Specification<Event> spec = Specification
                 .where(EventSpecification.hasUser(params.getUsers()))
                 .and(EventSpecification.hasStates(states)
-                .and(EventSpecification.hasCategories(params.getCategories()))
-                .and(EventSpecification.dateAfter(startDate))
-                .and(EventSpecification.dateBefore(endDate)));
+                        .and(EventSpecification.hasCategories(params.getCategories()))
+                        .and(EventSpecification.dateAfter(startDate))
+                        .and(EventSpecification.dateBefore(endDate)));
 
         Page<Event> page = eventsRepository.findAll(spec, pageRequest);
 
@@ -119,23 +145,8 @@ public class EventsServiceImpl implements EventsService {
             return Collections.emptyList();
         }
 
-        List<Long> eventIds = events.stream()
-                .map(Event::getId)
-                .toList();
-
         List<EventFullDto> eventFullDtoList = eventMapper.toEventFullDtoList(page.getContent());
-
-        Map<Long, Long> viewsMap = getViewsMap(eventIds);
-        Map<Long, Long> confirmedRequestsMap = getConfirmedRequestsMap(eventIds);
-
-        eventFullDtoList.forEach(dto -> {
-            dto.setConfirmedRequests(
-                    confirmedRequestsMap.getOrDefault(dto.getId(), 0L)
-            );
-            dto.setViews(
-                    viewsMap.getOrDefault(dto.getId(), 0L)
-            );
-        });
+        enrichEventFullDtosWithStats(eventFullDtoList);
 
         return eventFullDtoList;
     }
@@ -144,34 +155,77 @@ public class EventsServiceImpl implements EventsService {
     @Transactional(readOnly = true)
     public EventFullDto getEvent(Long id, HttpServletRequest request) {
         Event event = eventsRepository.findById(id)
-                .orElseThrow(() ->
-                        new NotFoundException("Event с id=" + id + " не найден"));
+                .orElseThrow(() -> new NotFoundException("Event с id=" + id + " не найден"));
 
         if (event.getState() != State.PUBLISHED) {
             throw new NotFoundException("Event с id=" + id + " не найден");
         }
 
-        EventFullDto dto = eventMapper.toEventFullDto(event);
+        /*
+         * Не уверен, нужно тестить
+         */
+        sendHitToStats("/events/" + id, request.getRemoteAddr());
 
-        dto.setViews(0L);
-        dto.setConfirmedRequests(0L);
+        EventFullDto dto = eventMapper.toEventFullDto(event);
+        enrichEventWithStats(dto);
 
         return dto;
     }
 
     @Override
     public EventFullDto createEvent(Long userId, NewEventDto dto) {
-        return null;
+        User user = getUserOrThrow(userId);
+        Category category = getCategoryOrThrow(dto.getCategory());
+
+        LocalDateTime eventDate = parseAndValidateEventDate(
+                dto.getEventDate(),
+                "Дата события должна быть не ранее чем через 2 часа от текущего момента"
+        );
+
+        Event event = eventMapper.toEvent(dto, category, user);
+        event.setCreatedOn(LocalDateTime.now());
+        event.setState(State.PENDING);
+        event.setEventDate(eventDate);
+
+        event = eventsRepository.save(event);
+
+        EventFullDto result = eventMapper.toEventFullDto(event);
+        result.setViews(0L);
+        result.setConfirmedRequests(0L);
+
+        return result;
     }
 
     @Override
-    public EventFullDto getUserEvent(Long userId, Long eventId) {
-        return null;
+    @Transactional(readOnly = true)
+    public EventFullDto getUserEvent(UserEventPathParams params) {
+        Event event = eventsRepository.findByIdAndInitiatorId(params.getEventId(), params.getUserId())
+                .orElseThrow(() -> new NotFoundException("Event с id=" + params.getEventId() + " не найден"));
+
+        EventFullDto dto = eventMapper.toEventFullDto(event);
+        enrichEventWithStats(dto);
+
+        return dto;
     }
 
+
     @Override
-    public List<EventShortDto> getUserEvents(Long userId, Integer from, Integer size) {
-        return List.of();
+    @Transactional(readOnly = true)
+    public List<EventShortDto> getUserEvents(Long userId, PaginationParams params) {
+        getUserOrThrow(userId);
+
+        PageRequest pageRequest = PageRequest.of(params.getFrom() / params.getSize(), params.getSize());
+        Page<Event> page = eventsRepository.findByInitiatorId(userId, pageRequest);
+        List<Event> events = page.getContent();
+
+        if (events.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        List<EventShortDto> dtos = eventMapper.toEventShortDtoList(events);
+        enrichEventsWithStats(dtos);
+
+        return dtos;
     }
 
     @Override
@@ -180,11 +234,65 @@ public class EventsServiceImpl implements EventsService {
     }
 
     @Override
-    public EventFullDto updateUserEvent(Long userId, Long eventId, UpdateEventUserRequest dto) {
-        return null;
+    public EventFullDto updateUserEvent(UserEventPathParams params, UpdateEventUserRequest dto) {
+        Event event = eventsRepository.findByIdAndInitiatorId(params.getEventId(), params.getUserId())
+                .orElseThrow(() -> new NotFoundException("Event с id=" + params.getEventId() + " не найден"));
+
+        if (event.getState() == State.PUBLISHED) {
+            throw new ConflictException("Можно изменять только отмененные события или события в состоянии ожидания модерации");
+        }
+
+        if (dto.getEventDate() != null) {
+            LocalDateTime eventDate = parseAndValidateEventDate(
+                    dto.getEventDate(),
+                    "Дата события должна быть не ранее чем через 2 часа от текущего момента"
+            );
+            event.setEventDate(eventDate);
+        }
+
+        if (dto.getAnnotation() != null) event.setAnnotation(dto.getAnnotation());
+        if (dto.getDescription() != null) event.setDescription(dto.getDescription());
+        if (dto.getTitle() != null) event.setTitle(dto.getTitle());
+        if (dto.getPaid() != null) event.setPaid(dto.getPaid());
+        if (dto.getParticipantLimit() != null) event.setParticipantLimit(dto.getParticipantLimit());
+        if (dto.getRequestModeration() != null) event.setRequestModeration(dto.getRequestModeration());
+
+        if (dto.getCategory() != null) {
+            Category category = getCategoryOrThrow(dto.getCategory());
+            event.setCategory(category);
+        }
+
+        if (dto.getLocation() != null) {
+            event.getLocation().setLat(dto.getLocation().getLat());
+            event.getLocation().setLon(dto.getLocation().getLon());
+        }
+
+        if (dto.getStateAction() != null) {
+            switch (dto.getStateAction()) {
+                case StateAction.SEND_TO_REVIEW -> event.setState(State.PENDING);
+                case StateAction.CANCEL_REVIEW -> event.setState(State.CANCELED);
+                default -> throw new ValidationException("Неизвестное состояние: " + dto.getStateAction());
+            }
+        }
+
+        event = eventsRepository.save(event);
+
+        EventFullDto result = eventMapper.toEventFullDto(event);
+        enrichEventWithStats(result);
+
+        return result;
     }
 
-    private Map<Long, Long> getViewsMap (List<Long> eventIds) {
+    private void sendHitToStats(String uri, String ip) {
+        statsClient.saveHit(EndpointHitDto.builder()
+                .app(APP_NAME)
+                .uri(uri)
+                .ip(ip)
+                .timestamp(LocalDateTime.now())
+                .build());
+    }
+
+    private Map<Long, Long> getViewsMap(List<Long> eventIds) {
 
         if (eventIds.isEmpty()) {
             return Collections.emptyMap();
@@ -219,8 +327,72 @@ public class EventsServiceImpl implements EventsService {
 
     }
 
-    private Map<Long, Long> getConfirmedRequestsMap (List<Long> eventIds) {
+    private Map<Long, Long> getConfirmedRequestsMap(List<Long> eventIds) {
         //нужно дописать после реализации запросов на участие
         return Collections.emptyMap();
+    }
+
+    private void enrichEventWithStats(EventFullDto dto) {
+        Map<Long, Long> viewsMap = getViewsMap(List.of(dto.getId()));
+        Map<Long, Long> confirmedMap = getConfirmedRequestsMap(List.of(dto.getId()));
+
+        dto.setViews(viewsMap.getOrDefault(dto.getId(), 0L));
+        dto.setConfirmedRequests(confirmedMap.getOrDefault(dto.getId(), 0L));
+    }
+
+    private void enrichEventsWithStats(List<EventShortDto> dtos) {
+        if (dtos.isEmpty()) {
+            return;
+        }
+
+        List<Long> eventIds = dtos.stream()
+                .map(EventShortDto::getId)
+                .toList();
+
+        Map<Long, Long> viewsMap = getViewsMap(eventIds);
+        Map<Long, Long> confirmedMap = getConfirmedRequestsMap(eventIds);
+
+        dtos.forEach(dto -> {
+            dto.setViews(viewsMap.getOrDefault(dto.getId(), 0L));
+            dto.setConfirmedRequests(confirmedMap.getOrDefault(dto.getId(), 0L));
+        });
+    }
+
+    private void enrichEventFullDtosWithStats(List<EventFullDto> dtos) {
+        if (dtos.isEmpty()) {
+            return;
+        }
+
+        List<Long> eventIds = dtos.stream()
+                .map(EventFullDto::getId)
+                .toList();
+
+        Map<Long, Long> viewsMap = getViewsMap(eventIds);
+        Map<Long, Long> confirmedMap = getConfirmedRequestsMap(eventIds);
+
+        dtos.forEach(dto -> {
+            dto.setViews(viewsMap.getOrDefault(dto.getId(), 0L));
+            dto.setConfirmedRequests(confirmedMap.getOrDefault(dto.getId(), 0L));
+        });
+    }
+
+    private LocalDateTime parseAndValidateEventDate(String dateStr, String errorMessage) {
+        LocalDateTime eventDate = LocalDateTime.parse(dateStr, FORMATTER);
+
+        if (eventDate.isBefore(LocalDateTime.now().plusHours(2))) {
+            throw new ConflictException(errorMessage);
+        }
+
+        return eventDate;
+    }
+
+    private User getUserOrThrow(Long userId) {
+        return userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("User с id=" + userId + " не найден"));
+    }
+
+    private Category getCategoryOrThrow(Long categoryId) {
+        return categoryRepository.findById(categoryId)
+                .orElseThrow(() -> new NotFoundException("Category с id=" + categoryId + " не найдена"));
     }
 }
